audio css and audio in songs.html

--- a/style.css
+++ b/style.css
@@ -242,14 +242,13 @@ body.night-theme #temp-toggle {
 }
 
 li {
-  margin-bottom: 40px; /* Adds 40px space below each list item */
-  text-align: left; 
+   
   margin-left: 19%;
 }
 
 audio {
   display:block; 
-  margin: 20px auto; 
+  margin-left: 19%;
   width :100%; 
   max-width:400px;
 }
