--- a/style.css
+++ b/style.css
@@ -1,3 +1,12 @@
+/* Position Tenor GIF in top right corner */
+.top-right-gif {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  z-index: 1000;
+  width: 150px;
+}
+
 * { box-sizing: border-box; }
 html, body {
   margin: 0;
@@ -247,8 +256,9 @@ li {
 }
 
 audio {
-  display:block; 
+  display: block; 
   margin-left: 19%;
-  width :100%; 
-  max-width:400px;
+  margin-bottom: 30px;
+  height: 40px;
+  width: 400px; 
 }
