--- a/style.css
+++ b/style.css
@@ -7,6 +7,18 @@
   width: 150px;
 }
 
+.top-left-gif {
+  position: absolute;
+  top: 10px;
+  left: 300px;
+  z-index: 1000;
+  width: 150px;
+}
+
+.flipped {
+  transform: scaleX(-1);
+}
+
 * { box-sizing: border-box; }
 html, body {
   margin: 0;
