--- a/style.css
+++ b/style.css
@@ -438,18 +438,18 @@ audio {
 
 .video-wrapper {
   position: relative;
-  padding-bottom: 56.25%; /* 16:9 aspect ratio */
+  padding-bottom: 60%;
   height: 0;
   overflow: hidden;
-  max-width: 100%; 
+  max-width: 800px;  /* or any max width you prefer */
+  width: 90%;        /* responsive width */
   margin: 0 auto;
 }
 
-.video-wrapper iframe {
+.video-wrapper video {
   position: absolute;
-  top: 0;
-  left: 0;
+  top: 0; left: 0;
   width: 100%;
   height: 100%;
-  border: 0;
+  display: block;
 }
